crates/keron-lang/tests/corpus/errors/check/contains_wrong_element_type.keron
# `contains` on a list binds the membership probe to the element
# type; an `Int` can never be an element of `List<String>`.
val xs: List<String> = ["a", "b"]
val n: Boolean = contains(xs, 42)
